--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # URLS
-PORT=
-SERVER_URL=
-CLIENT_URL=
+PORT=   # e.g.: 3000
+SERVER_URL=   # e.g.: http://localhost:3000
+CLIENT_URL=   # e.g.: http://localhost:5173
 
 # POSTGRES
-DB_HOST=
+DB_HOST=   # e.g.: localhost
 DB_USER=
 DB_PASSWORD=
-DB_NAME=
+DB_NAME=   # e.g.: likeme
